--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: myc
-SEOTitle: myc | BY Blog
+SEOTitle: myc Blog
 header-img: img/post-bg-desk.jpg
 email: archermyc@gmail.com
 description: "Every failure is leading towards success."
@@ -46,9 +46,9 @@ plugins: [jekyll-paginate]
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 highlighter: rouge
-kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-  syntax_highlighter: pygments
+# kramdown:
+# #   input: GFM                            # use Github Flavored Markdown !important
+#   syntax_highlighter: rouge
 
 
 
