fix: 更新配置文件
详细信息:

# 提交类型字段
# feat：新功能（feature）
# fix： 修补bug
# docs：文档（documentation）
# refactor：重构（即不是新增功能，也不是修改bug的代码变动）
# test：增加测试

--- a/_config.yml
+++ b/_config.yml
@@ -56,15 +56,15 @@ highlighter: rouge
 # Disqus（https://disqus.com/）
 # disqus_username: qiubaiying
 
-# Gitalk
-# gitalk:
-#   enable: true    #是否开启Gitalk评论
-#   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-#   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-#   repo: qiubaiying.github.io    #仓库名称
-#   owner: qiubaiying    #github用户名
-#   admin: qiubaiying
-#   distractionFreeMode: true #是否启用类似FB的阴影遮罩
+#Gitalk
+gitalk:
+  enable: true    #是否开启Gitalk评论
+  clientID: 267fb8efbb1d0244e095                            #生成的clientID
+  clientSecret: c769dd0cc63a535b08920f1ef342ac51a58c24d83    #生成的clientSecret
+  repo: qiubaiying.github.io    #仓库名称
+  owner: cooee    #github用户名
+  admin: myc
+  distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
