fix: 更新配置文件
详细信息:

# 提交类型字段
# feat：新功能（feature）
# fix： 修补bug
# docs：文档（documentation）
# refactor：重构（即不是新增功能，也不是修改bug的代码变动）
# test：增加测试

--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ gitalk:
   clientSecret: c769dd0cc63a535b08920f1ef342ac51a58c24d83    #生成的clientSecret
   repo: qiubaiying.github.io    #仓库名称
   owner: cooee    #github用户名
-  admin: myc
+  admin: cooee
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
