--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: 267fb8efbb1d0244e095                            #生成的clientID
   clientSecret: c769dd0cc63a535b08920f1ef342ac51a58c24d83    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
+  repo: cooee.github.io    #仓库名称
   owner: cooee    #github用户名
   admin: cooee
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
